Floor (World->Loc.w.par.) Bone Constraint transforms bone axes? #61981

Closed
opened 2019-02-26 16:44:03 +01:00 by Konstantins Visnevskis · 7 comments

System Information
Win7x64 and Ubuntu x64, gtx580

Blender Version
2.79, 2.8

Short description of error
Can't really put a finger on what's actually happening, but it looks like bone local axes get changed by Floor Bone Constraint when used in "World Space" <-> "Local With Parent" space.
If constraint is enabled Parent->Child bone transform switches action axes and, if enabled, a second floor constraint acts on another axis too.

Exact steps for others to reproduce the error
rig-007e.blend

  • Enable first constraint on B bone,
  • Move on Z the "C" bone -> resulting B bone motion axis seems correct,
  • Enable second constraint on B bone,
  • Move on Z the "C" bone -> first constraint now acts on another axis,
  • Also, enabling any of constraints changes axis the bone B is moved in, when it's parent "A" bone is moved.
**System Information** Win7x64 and Ubuntu x64, gtx580 **Blender Version** 2.79, 2.8 **Short description of error** Can't really put a finger on what's actually happening, but it looks like bone local axes get changed by Floor Bone Constraint when used in "World Space" <-> "Local With Parent" space. If constraint is enabled Parent->Child bone transform switches action axes and, if enabled, a second floor constraint acts on another axis too. **Exact steps for others to reproduce the error** [rig-007e.blend](https://archive.blender.org/developer/F6717860/rig-007e.blend) - Enable first constraint on B bone, - Move on Z the "C" bone -> resulting B bone motion axis seems correct, - Enable second constraint on B bone, - Move on Z the "C" bone -> first constraint now acts on another axis, - Also, enabling any of constraints changes axis the bone B is moved in, when it's parent "A" bone is moved.

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @KonstantinsVisnevskis
Konstantins Visnevskis changed title from Floor (World->Loc.w.par.) constraint transforms bone axes? to Floor (World->Loc.w.par.) Bone Constraint transforms bone axes? 2019-02-26 16:44:33 +01:00

Added subscribers: @JoshuaLeung, @ZedDB

Added subscribers: @JoshuaLeung, @ZedDB
Joshua Leung was assigned by Sebastian Parborg 2019-02-26 18:48:38 +01:00

@JoshuaLeung bug or not?

@JoshuaLeung bug or not?

Added subscriber: @angavrilov

Added subscriber: @angavrilov
Joshua Leung was unassigned by Alexander Gavrilov 2019-04-14 14:49:11 +02:00
Alexander Gavrilov self-assigned this 2019-04-14 14:49:11 +02:00

There seems to be incorrect matrix multiplication order in LWP to Pose space conversion.

There seems to be incorrect matrix multiplication order in LWP to Pose space conversion.

This issue was referenced by b42ae4b972

This issue was referenced by b42ae4b972a6ec8340f763b811663f9c08fb17c6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61981
No description provided.